--- a/Account_/Transaction_Fail.xib
+++ b/Account_/Transaction_Fail.xib
@@ -24,7 +24,7 @@
                             <constraint firstAttribute="width" constant="37" id="tbX-MP-ujI"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="sfsdf ádf ádfsdf à sfsaf à sfas á sadf ádfasdf.  sdafsdf àdsf" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kFQ-tc-IuM">
+                    <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="--" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kFQ-tc-IuM">
                         <rect key="frame" x="68" y="15" width="336" height="42"/>
                         <constraints>
                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="ZR5-UZ-jm7"/>
