--- a/Account_/Vip_Cell.xib
+++ b/Account_/Vip_Cell.xib
@@ -66,7 +66,7 @@
                     <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Vip1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Riw-ev-xJ6">
                         <rect key="frame" x="13" y="24" width="24" height="14"/>
                         <constraints>
-                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="24" id="AUD-jF-0rc"/>
+                            <constraint firstAttribute="width" constant="24" id="AUD-jF-0rc"/>
                             <constraint firstAttribute="height" constant="14" id="GDT-AY-BEd"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="boldSystem" pointSize="10"/>
