--- a/Tabbar_/Book_List_Cell.xib
+++ b/Tabbar_/Book_List_Cell.xib
@@ -10,11 +10,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Book_List_Cell" rowHeight="150" id="9LW-Yt-3Nr">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="150"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Book_List_Cell" rowHeight="167" id="9LW-Yt-3Nr">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="167"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="9LW-Yt-3Nr" id="eKm-44-0I4">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="150"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="167"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="W3e-Rb-1Cr">
@@ -109,20 +109,41 @@
                             <constraint firstAttribute="width" constant="160" id="wBY-bu-gC3"/>
                         </constraints>
                     </view>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.0" tag="15" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_hieusach_active" translatesAutoresizingMaskIntoConstraints="NO" id="Ex3-hZ-l5I">
+                        <rect key="frame" x="20" y="146" width="25" height="14"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="25" id="1x5-yo-eBD"/>
+                            <constraint firstAttribute="height" constant="14" id="A4j-Hi-qCg"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" alpha="0.0" tag="14" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xCm-F3-fkP">
+                        <rect key="frame" x="53" y="143" width="256" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="5Ro-y3-mDV"/>
+                            <constraint firstAttribute="width" constant="256" id="OBX-Pf-YpC"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
                     <constraint firstItem="s7P-cd-GVj" firstAttribute="leading" secondItem="eKm-44-0I4" secondAttribute="leading" constant="20" id="7G6-ww-ghv"/>
                     <constraint firstItem="fdH-1U-Xij" firstAttribute="top" secondItem="eKm-44-0I4" secondAttribute="top" constant="7" id="8c3-dw-4su"/>
+                    <constraint firstItem="Ex3-hZ-l5I" firstAttribute="leading" secondItem="eKm-44-0I4" secondAttribute="leading" constant="20" symbolic="YES" id="Ak0-sN-ttI"/>
                     <constraint firstItem="rsU-C0-1kF" firstAttribute="top" secondItem="Tjq-ps-R5d" secondAttribute="bottom" constant="8" symbolic="YES" id="BeH-En-Z4X"/>
                     <constraint firstItem="K0W-HG-Mtd" firstAttribute="leading" secondItem="WAf-UP-r62" secondAttribute="trailing" constant="12" id="CUO-X3-bko"/>
+                    <constraint firstItem="xCm-F3-fkP" firstAttribute="leading" secondItem="Ex3-hZ-l5I" secondAttribute="trailing" constant="8" symbolic="YES" id="HKP-JI-ls9"/>
                     <constraint firstItem="Tjq-ps-R5d" firstAttribute="leading" secondItem="WAf-UP-r62" secondAttribute="trailing" constant="12" id="KpV-aC-nqt"/>
                     <constraint firstItem="Pbg-mN-naX" firstAttribute="top" secondItem="K0W-HG-Mtd" secondAttribute="bottom" constant="4" id="OBo-Lv-H3D"/>
                     <constraint firstAttribute="trailing" secondItem="Pbg-mN-naX" secondAttribute="trailing" constant="11" id="U1j-u7-fOC"/>
                     <constraint firstAttribute="trailing" secondItem="fdH-1U-Xij" secondAttribute="trailing" constant="11" id="U6O-OP-PE0"/>
+                    <constraint firstItem="Ex3-hZ-l5I" firstAttribute="top" secondItem="W3e-Rb-1Cr" secondAttribute="bottom" constant="9" id="WIY-ad-Pe7"/>
                     <constraint firstItem="WAf-UP-r62" firstAttribute="leading" secondItem="eKm-44-0I4" secondAttribute="leading" constant="20" id="bPV-mJ-iEE"/>
                     <constraint firstAttribute="trailing" secondItem="Tjq-ps-R5d" secondAttribute="trailing" constant="11" id="c2l-oH-78k"/>
                     <constraint firstAttribute="trailing" secondItem="K0W-HG-Mtd" secondAttribute="trailing" constant="11" id="ccm-ar-3XD"/>
                     <constraint firstItem="rsU-C0-1kF" firstAttribute="leading" secondItem="W3e-Rb-1Cr" secondAttribute="trailing" constant="12" id="dtq-Dz-ekk"/>
+                    <constraint firstItem="xCm-F3-fkP" firstAttribute="top" secondItem="W3e-Rb-1Cr" secondAttribute="bottom" constant="6" id="iRL-VD-iih"/>
                     <constraint firstItem="T8C-V1-SZZ" firstAttribute="leading" secondItem="eKm-44-0I4" secondAttribute="leading" constant="20" id="j5u-Ss-0IJ"/>
                     <constraint firstItem="s7P-cd-GVj" firstAttribute="top" secondItem="eKm-44-0I4" secondAttribute="top" constant="6" id="jgQ-S8-ifM"/>
                     <constraint firstItem="Pbg-mN-naX" firstAttribute="leading" secondItem="WAf-UP-r62" secondAttribute="trailing" constant="12" id="k6D-TT-qfP"/>
@@ -135,10 +156,11 @@
                     <constraint firstItem="T8C-V1-SZZ" firstAttribute="top" secondItem="eKm-44-0I4" secondAttribute="top" constant="7" id="zyX-BR-y4o"/>
                 </constraints>
             </tableViewCellContentView>
-            <point key="canvasLocation" x="-73.913043478260875" y="24.776785714285712"/>
+            <point key="canvasLocation" x="-72.463768115942031" y="26.450892857142858"/>
         </tableViewCell>
     </objects>
     <resources>
+        <image name="ic_hieusach_active" width="33" height="33"/>
         <image name="ico_corner_top" width="31.5" height="31.5"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
