--- a/Detail_/Book_Detail_Title.xib
+++ b/Detail_/Book_Detail_Title.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -21,7 +21,7 @@
                         <constraint firstAttribute="height" constant="21" id="wRH-kK-4HN"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
-                    <nil key="textColor"/>
+                    <color key="textColor" red="0.1176470588" green="0.57254901960000004" blue="0.54901960780000003" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kC0-tX-euG">
@@ -43,6 +43,7 @@
                     <state key="normal" image="ic_delete_all"/>
                 </button>
             </subviews>
+            <viewLayoutGuide key="safeArea" id="NRE-us-FZn"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="kC0-tX-euG" firstAttribute="leading" secondItem="Ifz-Fg-esK" secondAttribute="trailing" id="1Cp-gD-jZT"/>
@@ -52,7 +53,6 @@
                 <constraint firstAttribute="trailing" secondItem="kC0-tX-euG" secondAttribute="trailing" constant="10" id="U4E-nh-bkh"/>
                 <constraint firstItem="kC0-tX-euG" firstAttribute="top" secondItem="OvS-kI-PUc" secondAttribute="top" constant="10" id="UaK-I2-pz3"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="NRE-us-FZn"/>
             <point key="canvasLocation" x="-110.14492753623189" y="-3.3482142857142856"/>
         </collectionReusableView>
     </objects>
