--- a/Tabbar_/Book_List_Cell.xib
+++ b/Tabbar_/Book_List_Cell.xib
@@ -109,7 +109,7 @@
                             <constraint firstAttribute="width" constant="160" id="wBY-bu-gC3"/>
                         </constraints>
                     </view>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.0" tag="15" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_hieusach_active" translatesAutoresizingMaskIntoConstraints="NO" id="Ex3-hZ-l5I">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.0" tag="15" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ico_new" translatesAutoresizingMaskIntoConstraints="NO" id="Ex3-hZ-l5I">
                         <rect key="frame" x="20" y="146" width="25" height="14"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="25" id="1x5-yo-eBD"/>
@@ -169,9 +169,9 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="ic_hieusach_active" width="33" height="33"/>
         <image name="ico_audio" width="31.5" height="31.5"/>
         <image name="ico_corner_top" width="31.5" height="31.5"/>
+        <image name="ico_new" width="33" height="15.5"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
