--- a/Tag_Add.xib
+++ b/Tag_Add.xib
@@ -27,7 +27,7 @@
                                 <color key="textColor" red="0.1176470588" green="0.57254901960000004" blue="0.54901960780000003" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ico_crown" translatesAutoresizingMaskIntoConstraints="NO" id="8rK-J3-trm">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ico_add" translatesAutoresizingMaskIntoConstraints="NO" id="8rK-J3-trm">
                                 <rect key="frame" x="5" y="4.5" width="25" height="25"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="25" id="LQh-dr-Uc2"/>
@@ -71,6 +71,6 @@
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="ico_crown" width="21" height="21"/>
+        <image name="ico_add" width="33" height="33"/>
     </resources>
 </document>
